fixing alignment

--- a/bobs-computer-repair/src/app/security-questions/security-questions.component.css
+++ b/bobs-computer-repair/src/app/security-questions/security-questions.component.css
@@ -4,27 +4,22 @@
     margin: 0 auto;
 }
 
-.formGroup button {
-    width: 25%;
-    color: white;
-        background-color: green;
-        font-size: 14px;
-        width: 25%;
-        cursor: pointer;
-        border-radius: 10px;
+.mat-submit {
+    background-color: green;
+    color: #fff;
+}
+
+.button {
         position: relative;
-        left: 250px;
+        left: 200px;
         bottom: 10px;
+        padding-top: 10px;
+        padding-bottom: 10px;
 }
 
 .securityQuestions {
     background-color: white;
-    width: 85%;
+    width: 100%;
     margin: 0 auto;
     border-radius: 10px;
-}
-
-.mat-submit {
-    background-color: green;
-    color: #fff;
 }
